--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -1,10 +1,10 @@
 @import "variables.scss";
 
 canvas{
-  position: absolute;
-  top:0;
-  left:0;
-  z-index:-1;
+	position: absolute;
+	top:0;
+	left:0;
+	z-index:1;
 }
 #animation-container {
 	position: absolute;
@@ -13,83 +13,127 @@ canvas{
 	z-index: 1;
 }
 header.carousel {
-	figure {
-		margin: 0;
-	}
-	.slide-content {
-		position: absolute;
-		bottom: 100px;
-		color: #fff;
-	}
-	.slick-next, .slick-prev {
-		display: none!important;
-	}
-	.slick-dots {
-		position: absolute;
-	    top: 50%;
-	    color: #fff;
-	    button {
-	    	background: none;
-	    	border: none;
-	    	font-size: 18px;
-	    	color: #fff;
-	    	font-family: 'Gilroy-Bold', sans-serif;
-	    	position: relative;
-	    	padding-left: 30px;
-	    	cursor: pointer;
-	    	opacity: .6;
-	    	&:before {
-	    		content: '';
-	    		height: 2px;
-	    		width: 15px;
-	    		background: #fff;
-	    		display: block;
-	    		position: absolute;
-	    		left: 0;
-	    		top: 50%;
-	    	}
-	    }
-	    li.slick-active {
-	    	button {
-	    		opacity: 1;
-	    		padding-left: 45px;
-	    		&:before {
-	    			width: 30px;
-	    		}
-	    	}
-	    }
-	}
-}
 
+	@keyframes scale-x-zero-to-max {
+		0% {
+			transform: scaleX(0);
+		}
 
-section.intro {
-	background: $light-grey;
-	padding: 3rem 0;
-}
-
-.trusted-by-carousel {
-	li {
-		position: relative;
-		height: 100px;
-	}
-	img {
-		filter: grayscale(100%);
-    	opacity: .5;	
-		max-width: 150px;
-		padding: 0 15px;
-	    position: absolute;
-	    margin: auto;
-	    top: 0;
-	    left: 0;
-	    right: 0;
-	    bottom: 0;
+		100% {
+			transform: scaleX(1);
+		}
 	}
 
-}
+	.slick-slide {
+		&:after {
+			background: #fb4136;
+
+			display: block;
+			content: "";
+
+			width: 100%;
+			height: .25rem;
+
+			position: absolute;
+			left: 0;
+			bottom: 0;
+			z-index: 99;
+
+			transform: scaleX(0);
+			transform-origin: left 50%;
+		}
+
+		&.slick-active:after {
+        animation: scale-x-zero-to-max 9s linear .8s 1 forwards; // Note that 6s should be same as Slick's autoplaySpeed and .8s same as speed
+      }
+    }
+
+
+    figure {
+    	margin: 0;
+    }
+    .slide-content {
+    	position: absolute;
+    	bottom: 100px;
+    	p {
+    		color:#a0a1a5;
+    		strong {
+    			color: #fff;
+    		}
+    	}
+    	.btn-next-service, h2 {
+    		color: #fff;
+    	}
+    }
+    .slick-next, .slick-prev {
+    	display: none!important;
+    }
+    .slick-dots {
+    	position: absolute;
+    	top: 50%;
+    	color: #fff;
+    	button {
+    		background: none;
+    		border: none;
+    		font-size: 18px;
+    		color: #fff;
+    		font-family: 'Gilroy-Bold', sans-serif;
+    		position: relative;
+    		padding-left: 30px;
+    		cursor: pointer;
+    		opacity: .6;
+    		&:before {
+    			content: '';
+    			height: 2px;
+    			width: 15px;
+    			background: #fff;
+    			display: block;
+    			position: absolute;
+    			left: 0;
+    			top: 50%;
+    		}
+    	}
+    	li.slick-active {
+    		button {
+    			opacity: 1;
+    			padding-left: 45px;
+    			&:before {
+    				width: 30px;
+    			}
+    		}
+    	}
+    }
+  }
+
+
+  section.intro {
+  	background: $light-grey;
+  	padding: 3rem 0;
+  }
+
+  .trusted-by-carousel {
+  	li {
+  		position: relative;
+  		height: 100px;
+  	}
+  	img {
+  		filter: grayscale(100%);
+  		opacity: .5;	
+  		max-width: 150px;
+  		padding: 0 15px;
+  		position: absolute;
+  		margin: auto;
+  		top: 0;
+  		left: 0;
+  		right: 0;
+  		bottom: 0;
+  	}
+
+  }
 
 
 
 
-@media screen and (min-width: 48em) {
+  @media screen and (min-width: 48em) {
 
-}
+  }
