--- a/app/styles/common.scss
+++ b/app/styles/common.scss
@@ -2,7 +2,9 @@ ul {
 	padding: 0;
 	list-style: none;
 }
-
+ * {
+    outline: none;
+ }
 //Space out content a bit 
 body {
   padding-bottom: 1.5rem;
