finish home page

--- a/app/styles/buttons.scss
+++ b/app/styles/buttons.scss
@@ -2,10 +2,10 @@
   font-family: Gilroy-Bold, sans-serif;
   border-radius: 40px;
   padding: 12px 30px;
-  font-size: 12px;
+  font-size: 15px;
 }
 
-.btn-learn-more, .btn-learn-more:hover  {
+.btn-learn-more, .btn-learn-more:hover, .btn-white  {
   background: #fff;
   color: #34373d;
   box-shadow: 0 5px 15px rgba(0,0,0,.1);
