--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -17,6 +17,7 @@ canvas{
 header.carousel {
 	figure img {
 		height: 100vh;
+		width: 100%;
 		object-fit: cover;
 	}
 
@@ -61,6 +62,7 @@ header.carousel {
     .slide-content {
     	position: absolute;
     	bottom: 100px;
+    	left: 10%;
     	p {
     		color:#a0a1a5;
     		strong {
@@ -286,6 +288,9 @@ section.contact {
 	    font-size: 120px;
 	    position: absolute;
 	    top: 10%;
+	    @media screen and (min-width: 1024px) {
+	    	font-style: 200px;
+	    }
 	}
 	.contact-form {
 		background: #f9f9f9;
