--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -7,6 +7,7 @@
 @import "common.scss";
 @import "buttons.scss";
 @import "home.scss";
+@import "menu.scss";
 
 .browserupgrade {
   margin: 0.2em 0;
