--- a/app/styles/menu.scss
+++ b/app/styles/menu.scss
@@ -29,7 +29,7 @@
 	    background: $orange;
 	    line-height: 65px;
         border-radius: 65px 0 0 65px;
-	    right: -15px;
+	    right: 0;
 	}
 
 	&.solid {
