start service page

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,8 +6,9 @@
 @import "fonts.scss";
 @import "common.scss";
 @import "buttons.scss";
-@import "home.scss";
 @import "menu.scss";
+@import "home.scss";
+@import "service.scss";
 
 .browserupgrade {
   margin: 0.2em 0;
