--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,6 +4,7 @@
 // endbower
 
 @import "fonts.scss";
+@import "variables.scss";
 @import "common.scss";
 @import "buttons.scss";
 @import "menu.scss";
