--- a/app/styles/menu.scss
+++ b/app/styles/menu.scss
@@ -15,6 +15,9 @@
 			padding-left: 1rem;
 		}
 	}
+	.nav-item {
+		float: left;
+	}
 	a.mobile {
 		margin: 0 1rem;
 		color: #fff;
@@ -24,7 +27,7 @@
 		color: #fff;
 	    width: 65px;
 	    height: 65px;
-	    position: relative;
+	    position: absolute;
 	    text-align: center;
 	    background: $orange;
 	    line-height: 65px;
@@ -35,7 +38,10 @@
 	&.solid {
 		background: #34373D;
 		ul.navbar-nav {
-			display: flex;
+			@media screen and (min-width: 1024px) {
+				display: flex;
+			}
+
 			a {
 				opacity: 1;
 			}
