--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -9,6 +9,7 @@
 @import "buttons.scss";
 @import "menu.scss";
 @import "home.scss";
+@import "contact.scss";
 @import "service.scss";
 
 .browserupgrade {
