--- a/app/styles/common.scss
+++ b/app/styles/common.scss
@@ -5,7 +5,7 @@ ul {
 	list-style: none;
 }
 p {
-    font-size: 18px;
+    font-size: 16px;
 }
  * {
     outline: none!important;
@@ -13,6 +13,24 @@ p {
 //Space out content a bit 
 body {
   padding-bottom: 1.5rem;
+}
+
+.grey {
+    color: #858487;
+}
+
+.dash-before {
+    padding-left: 30px;
+    &:before {
+        content: ' ';
+    display: block;
+    width: 25px;
+    position: relative;
+    left: -30px;
+    height: 1px;
+    top: 13px;
+    background: $orange;
+    }
 }
 
 .uppercase {
@@ -26,6 +44,7 @@ body {
 img.cover {
     width: 100vw;
     height: 100vh;
+    object-fit: cover;
 }
 strong {
     font-family: 'Gilroy-Bold', sans-serif;
@@ -40,6 +59,9 @@ strong {
   display: flex;
   align-items: center;
   justify-content: center;
+  &.column {
+    flex-flow: column;
+  }
 }
 
 // carousel
