--- a/app/styles/fonts.scss
+++ b/app/styles/fonts.scss
@@ -27,8 +27,6 @@
 
 
 /* @import must be at top of file, otherwise CSS will not work */
-@import url("//hello.myfonts.net/count/34b62e");
-
   
 @font-face {font-family: 'Gilroy-Regular';src: url('../webfonts/34B62E_0_0.eot');src: url('../webfonts/34B62E_0_0.eot?#iefix') format('embedded-opentype'),url('../webfonts/34B62E_0_0.woff2') format('woff2'),url('../webfonts/34B62E_0_0.woff') format('woff'),url('../webfonts/34B62E_0_0.ttf') format('truetype');}
  
@@ -54,6 +52,25 @@ h1, h2, h3, h4, h5 {
 	font-family: Gilroy-ExtraBold, sans-serif; 
 	font-weight: normal; 
 	font-style: normal; 
+}
+
+section:not(.contact) p {
+  color: #444548;
+}
+
+h2 {
+  font-size: 2.5rem;
+  @media screen and (min-width: 1024px) {
+    font-size: 3rem;
+  }
+}
+
+h3 {
+  font-size: 1.85rem;
+}
+
+h5 {
+  font-size: 17px;
 }
 
 h6 {
