--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,11 +4,15 @@
 // endbower
 
 @import "fonts.scss";
+@import "donut-charts.scss";
 @import "variables.scss";
 @import "common.scss";
+@import "pagination.scss";
 @import "buttons.scss";
 @import "menu.scss";
 @import "home.scss";
+@import "services.scss";
+@import "case.scss";
 @import "contact.scss";
 @import "service.scss";
 
