--- a/app/styles/buttons.scss
+++ b/app/styles/buttons.scss
@@ -16,7 +16,7 @@
   color: #fff;
   &:hover {
     color: #fff;
-    box-shadow: 1px 8px 20px rgba(0,0,0,.5);
+    box-shadow: 1px 2px 16px 2px rgba(0, 0, 0, 0.3);
   }
 }
 
