--- a/app/styles/menu.scss
+++ b/app/styles/menu.scss
@@ -1,10 +1,12 @@
 @import 'variables.scss';
 .navbar {
+	padding: 18px;
 	padding-right: 50px;
 	ul.navbar-nav {
 		display: none;
 		a {
 			color: #fff;
+			font-size: 18px;
 			opacity: .6;
 			&:hover {
 				color: #fff;
@@ -15,6 +17,10 @@
 			padding-right: 1rem;
 			padding-left: 1rem;
 		}
+	}
+
+	.navbar-brand.red {
+		display: none;
 	}
 	.nav-item {
 		float: left;
@@ -38,6 +44,14 @@
 	}
 
 	&.solid {
+		&.white-menu {
+			.navbar-brand.red-logo {
+				display: none;
+			}
+			.navbar-brand {
+				display: block;
+			}
+		}
 		background: #34373D;
 		ul.navbar-nav {
 			@media screen and (min-width: 1024px) {
@@ -48,6 +62,40 @@
 				opacity: 1;
 			}
 		}
+	}
+
+	&.white-menu {
+		a.mobile {
+					color: $text;
+				}
+		.navbar-brand {
+			display: none;
+		}
+		&.solid {
+			ul.navbar-nav a {
+				color: #fff;
+			}
+			a.mobile {
+				color: #fff;
+			}
+		}
+		ul.navbar-nav {
+			@media screen and (min-width: 1024px) {
+				display: block;
+				a {
+					color: $text;
+				}
+			}
+		}
+		@media screen and (min-width: 1224px) {
+				a.mobile {
+					display: block;
+				}
+			}
+		.navbar-brand.red-logo {
+			display: block;
+			}
+		
 	}
 
 }
