--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -13,6 +13,7 @@
 @import "home.scss";
 @import "services.scss";
 @import "case.scss";
+@import "about-us.scss";
 @import "contact.scss";
 @import "service.scss";
 
