--- a/app/styles/common.scss
+++ b/app/styles/common.scss
@@ -29,6 +29,7 @@ body {
         @media screen and (min-width: 992px) {
             border-bottom: none;
             padding-bottom: 30px;
+            margin-bottom: 0;
             border-right: 1px solid $grey;
         }
     }
