--- a/app/styles/fonts.scss
+++ b/app/styles/fonts.scss
@@ -4,7 +4,7 @@
  * 
  * The fonts listed in this notice are subject to the End User License
  * Agreement(s) entered into by the website owner. All other parties are 
- * explicitly restricted from using the Licensed ../Webfonts(s).
+ * explicitly restricted from using the Licensed ../fonts(s).
  * 
  * You may obtain a valid license at the URLs below.
  * 
@@ -20,7 +20,7 @@
  * 
  * License: https://www.myfonts.com/viewlicense?type=web&buildid=3454510
  * Licensed pageviews: 10,000
- * ../Webfonts copyright: Copyright &#x00A9; 2016 by Radomir Tinkov. All rights reserved.
+ * ../fonts copyright: Copyright &#x00A9; 2016 by Radomir Tinkov. All rights reserved.
  * 
  * © 2017 MyFonts Inc
 */
@@ -28,13 +28,13 @@
 
 /* @import must be at top of file, otherwise CSS will not work */
   
-@font-face {font-family: 'Gilroy-Regular';src: url('../webfonts/34B62E_0_0.eot');src: url('../webfonts/34B62E_0_0.eot?#iefix') format('embedded-opentype'),url('../webfonts/34B62E_0_0.woff2') format('woff2'),url('../webfonts/34B62E_0_0.woff') format('woff'),url('../webfonts/34B62E_0_0.ttf') format('truetype');}
+@font-face {font-family: 'Gilroy-Regular';src: url('../fonts/34B62E_0_0.eot');src: url('../fonts/34B62E_0_0.eot?#iefix') format('embedded-opentype'),url('../fonts/34B62E_0_0.woff2') format('woff2'),url('../fonts/34B62E_0_0.woff') format('woff'),url('../fonts/34B62E_0_0.ttf') format('truetype');}
  
   
-@font-face {font-family: 'Gilroy-ExtraBold';src: url('../webfonts/34B62E_1_0.eot');src: url('../webfonts/34B62E_1_0.eot?#iefix') format('embedded-opentype'),url('../webfonts/34B62E_1_0.woff2') format('woff2'),url('../webfonts/34B62E_1_0.woff') format('woff'),url('../webfonts/34B62E_1_0.ttf') format('truetype');}
+@font-face {font-family: 'Gilroy-ExtraBold';src: url('../fonts/34B62E_1_0.eot');src: url('../fonts/34B62E_1_0.eot?#iefix') format('embedded-opentype'),url('../fonts/34B62E_1_0.woff2') format('woff2'),url('../fonts/34B62E_1_0.woff') format('woff'),url('../fonts/34B62E_1_0.ttf') format('truetype');}
  
   
-@font-face {font-family: 'Gilroy-Bold';src: url('../webfonts/34B62E_2_0.eot');src: url('../webfonts/34B62E_2_0.eot?#iefix') format('embedded-opentype'),url('../webfonts/34B62E_2_0.woff2') format('woff2'),url('../webfonts/34B62E_2_0.woff') format('woff'),url('../webfonts/34B62E_2_0.ttf') format('truetype');}
+@font-face {font-family: 'Gilroy-Bold';src: url('../fonts/34B62E_2_0.eot');src: url('../fonts/34B62E_2_0.eot?#iefix') format('embedded-opentype'),url('../fonts/34B62E_2_0.woff2') format('woff2'),url('../fonts/34B62E_2_0.woff') format('woff'),url('../fonts/34B62E_2_0.ttf') format('truetype');}
 
 body {
   color: #34373d;
