--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,6 +10,7 @@
 @import "pagination.scss";
 @import "buttons.scss";
 @import "menu.scss";
+@import "advice-center.scss";
 @import "home.scss";
 @import "services.scss";
 @import "case.scss";
