--- a/app/styles/service.scss
+++ b/app/styles/service.scss
@@ -16,6 +16,10 @@
 		right: 15px;
 	}
 
+	.intro {
+		padding: 100px 0;
+	}
+
 	.why {
 		figure {
 			text-align: center;
@@ -34,7 +38,7 @@
 	}
 
 	.how {
-		h3 {
+		h4 {
 			margin: 15px 0;
 		}
     border-top: 1px solid $grey;
