--- a/app/styles/common.scss
+++ b/app/styles/common.scss
@@ -23,14 +23,14 @@ body {
 
 .intro, .traffic {
     .bordered {
-        border-bottom: 1px solid $grey;
+        border-bottom: 1px solid #d6cece;
         margin-bottom: 50px;
         padding-bottom: 60px;
         @media screen and (min-width: 992px) {
             border-bottom: none;
             padding-bottom: 30px;
             margin-bottom: 0;
-            border-right: 1px solid $grey;
+            border-right: 1px solid #d6cece;
         }
     }
 }
