--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -138,6 +138,11 @@ header.carousel {
   			color: #34373d;
   		}
   	}
+    .case-content {
+      @media screen and (min-width: 1024px) {
+        padding-top: 15%;
+      }
+    }
   	.case-studies-carousel, .trusted-by-carousel {
   		padding: 0 45px;
   	}
@@ -296,7 +301,7 @@ section.contact {
 	    position: absolute;
 	    top: 10%;
 	    @media screen and (min-width: 1024px) {
-	    	font-style: 200px;
+	    	font-size: 200px;
 	    }
 	}
 	.contact-form {
