--- a/app/styles/case.scss
+++ b/app/styles/case.scss
@@ -2,7 +2,7 @@
 .case-study {
   .charts {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
   }
   h3 {
     margin-bottom: 30px;
