--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -13,7 +13,7 @@
 canvas{
 	// position: absolute;
 	top:0;
-	margin-top: -300px;
+	margin-top: -150px;
 	width: 100%!important;
 	left:0;
 	z-index:1;
@@ -128,10 +128,17 @@ header.carousel {
 
 
   section.intro {
+  	p {
+  		margin-bottom: 45px;
+  		margin-top: 30px;
+  	}
   	background: $light-grey;
-  	padding: 3rem 0;
+  	padding: 100px 0 150px 0;
   	h6 {
   		color: #858487;
+  	}
+  	.btn {
+  		margin-bottom: 15px;
   	}
   }
 
