--- a/app/styles/menu.scss
+++ b/app/styles/menu.scss
@@ -112,28 +112,74 @@
 	    z-index: 1; /* Stay on top */
 	    top: 0;
 	    right: 0;
-	    background-color: #111; /* Black*/
+	    background-color: $light-grey;
 	    overflow-x: hidden; /* Disable horizontal scroll */
 	    padding-top: 60px; /* Place content 60px from the top */
 	    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
 	    &.open {
 	    	width: 250px;
+				@media screen and (min-width: 600px) {
+		    	width: 350px;
+				}
 	    }
 	}
 
+	button.menu-link {
+		right: 0;
+		z-index: -1;
+		&:hover {
+			cursor: pointer;
+		}
+	}
+
+	.sidenav.open + button.menu-link {
+		opacity: 1;
+		z-index: 999;
+		right: 250px;
+		@media screen and (min-width: 600px) {
+			right: 350px;
+		}
+		transition: all .5s;
+	}
+
 	/* The navigation menu links */
-	.sidenav a {
-	    padding: 8px 8px 8px 32px;
+	.sidenav .nav-links a {
+	    padding: 8px 8px 8px 50px;
 	    text-decoration: none;
-	    font-size: 25px;
-	    color: #818181;
+	    font-size: 24px;
+	    @media screen and (min-width: 600px) {
+		    font-size: 34px;
+	    }
+	    font-family: 'Gilroy-ExtraBold', sans-serif;
+	    color: #b7b7b7;
 	    display: block;
-	    transition: 0.3s
+	    transition: 0.3s;
+	    position: relative;
+	    &:before {
+	    	content: ' ';
+	    	width: 25px;
+				background: $orange;
+				height: 1px;
+				display: block;
+				opacity: 0;
+				position: absolute;
+				top: 25px;
+				@media screen and (min-width: 600px) {
+					top: 30px;
+				}
+				left: 30px;
+	    }
 	}
 
 	/* When you mouse over the navigation links, change their color */
 	.sidenav a:hover, .offcanvas a:focus{
-	    color: #f1f1f1;
+	    color: $text;
+	    padding-left: 75px;
+	    &:before {
+	    	transition: .5s all ease;
+	    	opacity: 1;
+				left: 35px;
+	    }
 	}
 
 	/* Position and style the close button (top right corner) */
