--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -340,6 +340,10 @@ footer {
 	.social-media {
 		margin: 50px 0;
 	}
+  .google-partner img {
+    width: 150px;
+    margin-left: 15px;
+  }
 	a, a.fa, a:hover {
 			color: #000;
 		}
