--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -142,7 +142,7 @@ header.carousel {
   	}
   }
 
-  .case-studies {
+  .case-studies, .testimonials-carousel {
   	.service {
   		color: #bfbfbf;
   		strong {
