--- a/app/styles/common.scss
+++ b/app/styles/common.scss
@@ -65,17 +65,24 @@ body {
     }
 }
 .dash-before {
-    padding-left: 30px;
+    padding-left: 35px;
     &:before {
         content: ' ';
         display: block;
         width: 25px;
         position: relative;
-        left: -30px;
+        left: -35px;
         height: 1px;
         top: 13px;
         background: $orange;
     }
+}
+.btn:focus, .btn.focus {
+    box-shadow: 0 0 0 3px rgb(246, 65, 56);
+}
+
+.intro h2 + p {
+    font-size: 18px;
 }
 
 .uppercase {
@@ -186,6 +193,13 @@ h2 {
       height: 100%;
       position: absolute;
       background: rgba(0,0,0,.4);
+    }
+
+.bg-grey {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      background: rgba(80, 78, 78, 0.4);
     }
 
 .case-examples {
