--- a/app/styles/advice-center.scss
+++ b/app/styles/advice-center.scss
@@ -8,7 +8,9 @@
     text-align: center;
     margin-top: 0;
     margin-right: 50px;
-    margin-bottom: 50px;
+    position: absolute;
+    right: 0;
+    bottom: 27px;
   }
   } 
   .hero {
