--- a/app/styles/services.scss
+++ b/app/styles/services.scss
@@ -1,10 +1,15 @@
 @import "variables.scss";
 .services-page {
-
+  header {
+    position: relative;
+    canvas {
+      margin-top: -100px;
+    }
+  }
   header .content {
     padding-top: 20vh;
     background: $light-grey;
-    padding-bottom: 50px;
+    padding-bottom: 150px;
   }
   header h2 {
     color: $text;
@@ -21,10 +26,10 @@
         content: ' ';
         display: block;
         position: absolute;
-        top: 25px;
+        // top: 25px;
         left: 50%;
         width: 1px;
-        height: 30px;
+        height: 26px;
         background: #bfbfbf;
       }
       
