--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -97,7 +97,9 @@ header.carousel {
     		border: none;
     		font-size: 18px;
     		color: #fff;
-    		font-family: 'Gilroy-Bold', sans-serif;
+    		font-family: pill-gothic-600mg, sans-serif;
+			  font-style: normal;
+			  font-weight: 700;
     		position: relative;
     		padding-left: 30px;
     		cursor: pointer;
