--- a/app/styles/fonts.scss
+++ b/app/styles/fonts.scss
@@ -36,6 +36,12 @@
   
 @font-face {font-family: 'Gilroy-Bold';src: url('../fonts/34B62E_2_0.eot');src: url('../fonts/34B62E_2_0.eot?#iefix') format('embedded-opentype'),url('../fonts/34B62E_2_0.woff2') format('woff2'),url('../fonts/34B62E_2_0.woff') format('woff'),url('../fonts/34B62E_2_0.ttf') format('truetype');}
 
+.pill, .small-text-grey, .small-grey-text {
+  font-family: pill-gothic-600mg, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+}
+
 body {
   color: #34373d;
 }
