--- a/app/styles/menu.scss
+++ b/app/styles/menu.scss
@@ -18,7 +18,7 @@
 			padding-left: 1rem;
 			position: relative;
 			display: inline-block;
-			margin: 15px 25px;
+			// margin: 15px 25px;
 			outline: none;
 			color: rgba(255,255,255, .7);
 			text-decoration: none;
