--- a/app/styles/contact.scss
+++ b/app/styles/contact.scss
@@ -12,6 +12,7 @@
       height: 70vh;
       width: 100%;
       object-fit: cover;
+      object-position: top;
     }
     .contact-content {
       h2 {
@@ -20,6 +21,7 @@
       }
       p {
         font-size: 18px;
+        margin-bottom: 50px;
       }
     }
     .container {
