--- a/app/styles/common.scss
+++ b/app/styles/common.scss
@@ -19,7 +19,9 @@ body {
     // padding-top: 90px;
   padding-bottom: 1.5rem;
 }
-
+button:hover {
+    cursor: pointer;
+}
 .article {
     ul {
       list-style-type: none;
