--- a/app/styles/about-us.scss
+++ b/app/styles/about-us.scss
@@ -4,15 +4,15 @@
     padding: 10vh 15px;
   }
   .trusted-by-carousel{
-    margin-top: 100px;
+    // margin-top: 100px;
     .slick-prev:before, .slick-next:before {
       color: $text;
     }
   }
   header {
     h2 {
-    color: $text;
-    margin: 15px 0;
+      color: $text;
+      margin: 15px 0;
     }
   }
   .fixed-nav {
@@ -107,6 +107,15 @@
     transition: all .4s ease;
   }
 
+  .testimonial {
+    .author {
+      margin-top: 25px;
+    }
+    p {
+      margin: 0 25px;
+    }
+  }
+
   .testimonials-carousel {
     .slick-dots {
       position: static;
@@ -158,12 +167,12 @@
     }
     .author {
       position: absolute;
-    bottom: 0;
-    left: 30%;
-    border-radius: 0 100px 0 0;
-    background: #fff;
-    padding: 25px 100px 25px 50px;
-    transform: translate(0, -15px);
+      bottom: 0;
+      left: 30%;
+      border-radius: 0 100px 0 0;
+      background: #fff;
+      padding: 25px 100px 25px 50px;
+      transform: translate(0, -15px);
     }
   }
   .italic {
